--- a/.asf.yaml
+++ b/.asf.yaml
@@ -1,13 +1,3 @@
-github:
-  description: "Website sources for the Travel Assistance Committee"
-  homepage: https://tac.apache.org
-  labels:
-    - asf
-    - travel
-    - tac
-    - hugo
-
-notifications:
-  commits:      commits@tac.apache.org
-  issues:       commits@tac.apache.org
-  pullrequests: commits@tac.apache.org
+staging:
+  profile: ~
+  whoami: asf-staging
