Redirect the old application link to the webapp

--- a/static/.htaccess
+++ b/static/.htaccess
@@ -1,3 +1,6 @@
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
+
+# Link to the webapp
+RewriteRule "^/application" https://tac.apache.org/ [R,L]
